@@ -625,6 +625,7 @@
 #define LARGE 1
 #define GIANT 2
 #define ARANEA 3
+#define PHASE 4
 
 #define IMPRISONED_HUNTER 1
 
